corrected mistake of shopingredient not being checked when it should be

--- a/CookMania/Storyboards/Base.lproj/Main.storyboard
+++ b/CookMania/Storyboards/Base.lproj/Main.storyboard
@@ -3785,7 +3785,7 @@ EDE5OA
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="3Hv-pz-kTR"/>
-        <segue reference="gyG-aW-51a"/>
+        <segue reference="OPd-kw-L1Q"/>
         <segue reference="zjX-6Z-rTw"/>
     </inferredMetricsTieBreakers>
 </document>
